# Garage-Door-Control-System

./: .gitignore  CMakeLists.txt  README.md  main.cpp
communication/: command_parser.cpp  command_parser.h  mqtt_client.cpp  mqtt_client.h  status_serializer.cpp  status_serializer.h
core/: garage_door_controller.cpp  garage_door_controller.h  garage_types.h
hardware/: board_config.h  buttons.cpp  buttons.h  limit_switches.cpp  limit_switches.h  rotary_encoder.cpp  rotary_encoder.h  status_leds.cpp  status_leds.h  stepper_motor.cpp  stepper_motor.h
logic/: calibration_engine.cpp  calibration_engine.h  position_tracker.cpp  position_tracker.h  safety_monitor.cpp  safety_monitor.h
mqtt/: IPStack.cpp
storage/: persistent_storage.cpp  persistent_storage.h
